# uterine-chaste

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  SConstruct
.devcontainer/: devcontainer.json
.devcontainer/portability/: devcontainer.json
.github/workflows/: coverage.yml  docker-develop-image.yml  docker-release-image.yml  memory-testing.yml  portability.yml  profiling-gprof.yml  project-tests.yml  pychaste-conda-tests.yml  pychaste-ubuntu-tests.yml  regenerate-archive.yml  ubuntu-2204-compilers.yml  ubuntu-2404-compilers.yml  ubuntu-basic-compatibility.yml  ubuntu-infrastructure.yml  ubuntu-np3.yml  ubuntu-parallel.yml  ubuntu-tests.yml  update-pychaste-tutorials.yml
anim/: Visualize2dCentreCells.java  Visualize2dVertexCells.java
apps/: CMakeLists.txt
apps/src/: Chaste.cpp  MeshConvert.cpp
cell_based/: CMakeLists.txt
cell_based/test/: CMakeLists.txt
cmake/: CMakeLists.txt  process_coverage_output.py  process_profile.py  process_valgrind_output.py  run-doxygen.py
cmake/Modules/: ChasteBuildTypes.cmake  ChasteCompilerFlags.cmake  ChasteHostOperatingSystem.py  ChasteMacros.cmake  FindPETSc.cmake  FindPETSc4py.cmake  FindSUNDIALS.cmake
cmake/third_party_libs/: CMakeLists.txt
continuum_mechanics/: CMakeLists.txt
continuum_mechanics/test/: CMakeLists.txt  TestAbstractContinuumMechanicsAssembler.hpp  TestCompressibleNonlinearElasticitySolver.hpp  TestContinuumMechanicsNeumannBcsAssembler.hpp  TestIncompressibleNonlinearElasticitySolver.hpp  TestIncompressibleNonlinearElasticitySolverLong.hpp  TestMaterialLaws.hpp  TestMoreMechanics.hpp  TestNonlinearElasticityTools.hpp  TestProblemDefinitions.hpp  TestSolvingElasticityProblemsTutorial.hpp  TestSolvingMoreElasticityProblemsTutorial.hpp  TestStokesFlowAssembler.hpp  TestStokesFlowSolver.hpp  TestVtkNonlinearElasticitySolutionWriter.hpp  ToyCompressibleMaterialLaw.hpp
crypt/: CMakeLists.txt
crypt/test/: CMakeLists.txt
docs/licencing/: Licences.html
global/: CMakeLists.txt
global/src/: ChasteBuildRoot.hpp  ChastePragmas.hpp  ChasteSyscalls.hpp  Citations.cpp  Citations.hpp  CommandLineArguments.cpp  CommandLineArguments.hpp  Debug.cpp  Debug.hpp  DoxygenMainPage.hpp  Exception.cpp  Exception.hpp  ExecutableSupport.cpp  ExecutableSupport.hpp  FileFinder.cpp  FileFinder.hpp  GetCurrentWorkingDirectory.cpp  GetCurrentWorkingDirectory.hpp  IsNan.hpp  LogFile.cpp  LogFile.hpp  MathsCustomFunctions.cpp  MathsCustomFunctions.hpp  ObjectCommunicator.hpp  OutputFileHandler.cpp  (+17 more)
heart/: CMakeLists.txt
io/: CMakeLists.txt
linalg/: CMakeLists.txt
lung/: CMakeLists.txt
mesh/: CMakeLists.txt
ode/: CMakeLists.txt
pde/: CMakeLists.txt
pychaste/: .gitignore  CMakeLists.txt
pychaste/dynamic/: config.yaml
pychaste/dynamic/templates/: CellsGeneratorCustomTemplate.py  MutableElementCustomTemplate.py  PopulationWriterCustomTemplate.py  ReplicatableVectorCustomTemplate.py
pychaste/dynamic/typecasters/: PybindUblasTypeCaster.hpp
pychaste/src/cpp/cell_based/: AttractingPlaneBoundaryCondition.cpp  AttractingPlaneBoundaryCondition.hpp  PythonSimulationModifier.cpp  PythonSimulationModifier.hpp  VtkSceneModifier.cpp  VtkSceneModifier.hpp
pychaste/src/cpp/visualization/: AbstractPyChasteActorGenerator.cpp  AbstractPyChasteActorGenerator.hpp  CellPopulationPyChasteActorGenerator.cpp  CellPopulationPyChasteActorGenerator.hpp  VtkScene.cpp  VtkScene.hpp
pychaste/src/py/: MANIFEST.in  setup.cfg  setup.py
pychaste/src/py/chaste/: __init__.py  _syntax.py
pychaste/src/py/chaste/cell_based/: __init__.py  _fortests.py
pychaste/src/py/chaste/core/: __init__.py
pychaste/src/py/chaste/mesh/: __init__.py
pychaste/src/py/chaste/ode/: __init__.py
pychaste/src/py/chaste/pde/: __init__.py
pychaste/src/py/chaste/visualization/: __init__.py  _jupyter.py
pychaste/src/py/conda/: README.md  build-package.sh  environment.yml
pychaste/src/py/conda/envs/: env_python3.10.yaml  env_python3.11.yaml  env_python3.12.yaml  env_python3.13.yaml  env_python3.9.yaml
pychaste/src/py/conda/recipe/: build.sh  meta.yaml
pychaste/src/py/conda/variants/: linux_64_python3.10_cpython.yaml  linux_64_python3.11_cpython.yaml  linux_64_python3.12_cpython.yaml  linux_64_python3.13_cpython.yaml  linux_64_python3.8_cpython.yaml  linux_64_python3.9_cpython.yaml
pychaste/src/py/doc/tutorial/: CellSorting.ipynb  CellSorting.md  ImmersedBoundary.ipynb  ImmersedBoundary.md  MeshBasedCellSimulations.ipynb  MeshBasedCellSimulations.md  NodeBasedCellSimulations.ipynb  NodeBasedCellSimulations.md  PottsBasedCellSimulations.ipynb  PottsBasedCellSimulations.md  ScratchAssay.ipynb  ScratchAssay.md  Spheroid.ipynb  Spheroid.md  TensileTest.ipynb  TensileTest.md  VertexBasedCellSimulations.ipynb  VertexBasedCellSimulations.md
pychaste/test/: CMakeLists.txt  ContinuousTestPack.txt
pychaste/test/cell_based/: TestPyCaBasedCellPopulation.py  TestPyMeshBasedCellPopulation.py  TestPyNodeBasedCellPopulation.py  TestPyVertexBasedCellPopulation.py
pychaste/test/core/: TestPyFileFinder.py  TestPyImports.py  TestPyOutputFileHandler.py  TestPyPetscTools.py  TestPyRandomNumberGenerator.py  TestPyTimer.py  TestPyVersion.py  TestPyWrapperChanges.py
pychaste/test/mesh/: TestPyChastePoint.py  TestPyPottsMesh.py
pychaste/test/tutorial/: TestPyCellSortingTutorial.py  TestPyImmersedBoundaryTutorial.py  TestPyMeshBasedCellSimulationsTutorial.py  TestPyNodeBasedCellSimulationsTutorial.py  TestPyPottsBasedCellSimulationsTutorial.py  TestPyScratchAssayTutorial.py  TestPySpheroidTutorial.py  TestPyTensileTestTutorial.py  TestPyVertexBasedCellSimulationsTutorial.py
pychaste/test/visualization/: TestPyJupyterNotebookManager.py  TestVtkSceneWithCaBased.hpp  TestVtkSceneWithMeshBased.hpp  TestVtkSceneWithPottsBased.hpp
python/: DisplayTests.py  killer.py
(+1854 files in other folders)
